<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userReposViewModel"
            type="com.example.raghav.jetpackgithub.viewmodel.UserReposViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        tools:context=".ui.UserReposFragment">

        <!--
        The below LinearLayout has focusable and focusableInTouchMode set to true to prevent the
        TextInputEditText from getting focus when the activity is created.
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_a_github_user_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/github_user_id_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textAllCaps="true"
                android:layout_marginStart="15dp"
                android:onClick="@{() -> userReposViewModel.init(githubUserIdInput.getText().toString())}"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/github_user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/enter_a_github_user_id"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:layout_marginTop="15dp"
            bind:imageFromUrl="@{userReposViewModel.avatarUrl}"/>

        <TextView
            android:id="@+id/github_user_id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:text="@{userReposViewModel.userName}"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/repos_list_view"
            android:layoutAnimation="@anim/layout_animation_slide_up"/>

    </LinearLayout>
</layout>
